# object_detection_model_-RFDETR

./: .gcloudignore  .gitignore  Dockerfile  README.md  api.py  cloudbuild.yaml  debug_single_step.py  export_onnx.py  infer.py  main.py  onnx_detector.py  pyproject.toml  small_video_tracked.csv  tracker_core.py  weights.dvc
.dvc/: config
frontend/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DownloadButton.tsx  StatsPanel.tsx  Uploader.tsx  VideoPlayer.tsx
frontend/src/lib/: api.ts  overlay.ts
