[project]
name = "object-tracking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gs>=3.0.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "rfdetr[onnx]>=1.6.5",
    "tqdm>=4.67.3",
    "trackers>=2.3.0",
]

[[tool.uv.index]]
name = "pypi_cooldown"
url = "https://pypi-cooldown.tooling-travelperk.com/simple/"

[[tool.uv.index]]
url = "https://pypi-256045177368.d.codeartifact.eu-west-1.amazonaws.com/pypi/pypi/simple/"
default = true
